testdata/fixtures/audit/positive/shell_interp_exec_js.js
const child_process = require("child_process");

function listDir(dir) {
  child_process.exec(`ls ${dir}`);
}
