testdata/fixtures/audit/negative/exec_user_input_neg_constant_js.js
const child_process = require("child_process");

function listDir() {
  child_process.exec("ls -la");
}
